--- a/website-repo/src/pages/home.css
+++ b/website-repo/src/pages/home.css
@@ -1,10 +1,19 @@
+.home-container {
+    height: 92%;
+    background-color: rgb(16, 16, 34);
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='1' y2='0'%3E%3Cstop offset='0' stop-color='%230FF'/%3E%3Cstop offset='1' stop-color='%23CF6'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%23F00'/%3E%3Cstop offset='1' stop-color='%23FC0'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23FFF' fill-opacity='0' stroke-miterlimit='10'%3E%3Cg stroke='url(%23a)' stroke-width='2'%3E%3Cpath transform='translate(-14.7 -8.4) rotate(-8.4 1409 581) scale(0.937)' d='M1409 581 1450.35 511 1490 581z'/%3E%3Ccircle stroke-width='4' transform='translate(-52.5 21) rotate(-4.2 800 450) scale(0.99)' cx='500' cy='100' r='40'/%3E%3Cpath transform='translate(-14.7 31.5) rotate(-52.5 401 736) scale(0.99)' d='M400.86 735.5h-83.73c0-23.12 18.74-41.87 41.87-41.87S400.86 712.38 400.86 735.5z'/%3E%3C/g%3E%3Cg stroke='url(%23b)' stroke-width='4'%3E%3Cpath transform='translate(126 12.6) rotate(-3.15 150 345) scale(1.021)' d='M149.8 345.2 118.4 389.8 149.8 434.4 181.2 389.8z'/%3E%3Crect stroke-width='8' transform='translate(31.5 -63) rotate(-75.6 1089 759)' x='1039' y='709' width='100' height='100'/%3E%3Cpath transform='translate(-8.4 -8.4) rotate(-12.6 1400 132) scale(0.895)' d='M1426.8 132.4 1405.7 168.8 1363.7 168.8 1342.7 132.4 1363.7 96 1405.7 96z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: cover;
+}
+
 .home-title, .home-details{
     margin: auto;
     text-align: center;
+    color: white;
 }
 
 .home-title {
-    margin-top: 20vh;
+    padding-top: 20vh;
     width: 90%;
     font-size: calc(100% + 2vw);
     font-weight: 600;
@@ -19,6 +28,7 @@
     margin: auto;
     margin-top: 15vh;
     text-align: center;
+    color: white;
 }
 
 .home-contact p {
